hphp/hack/test/typecheck/primitive_casing_cast.php.exp
File "primitive_casing_cast.php", line 4, characters 11-16:
Keyword strING must be written in lowercase (Parsing[1002])
