hphp/hack/test/typecheck/primitive_casing_cast.php
<?hh // partial

function f(array $arr): string {
  return (strING)$arr;
}
